rest-fights/src/main/kubernetes/openshift.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apicurio
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: apicurio
  name: apicurio
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: apicurio
